--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <div id="google_translate_element"></div>
+
     <header>
         <h1>Welcome to my first Website :D</h1>
         <p>Made by Sharky :D</p>
@@ -17,5 +19,16 @@
     <p id="message"></p>
 
     <script src="script.js"></script>
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+        }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
