--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-    <div id="google_translate_element"></div>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">×</a>
+        <h3>Menu</h3>
+        <a href="#">About</a>
+        <div id="google_translate_element"></div>
+        <a href="#">Contact</a>
+    </div>
+
+    <button class="openbtn" onclick="openSidebar()">☰ Menu</button>
 
     <header>
         <h1>Welcome to my first Website :D</h1>
@@ -28,7 +36,17 @@
             );
         }
     </script>
-
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <script>
+        function openSidebar() {
+            document.getElementById("mySidebar").style.width = "250px";
+        }
+
+        function closeSidebar() {
+            document.getElementById("mySidebar").style.width = "0";
+        }
+    </script>
+
 </body>
 </html>
